// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard (unit tests) when current step don't have state should match the snapshot 1`] = `
<kv-wizard complete-btn-label="Submit" current-step="1" show-header="" show-step-bar="">
  <mock:shadow-root>
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Configuration" label="Step 2"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer currentstep="1" nextbtnlabel="Next" prevbtnlabel="Back" prevenabled="" progresspercentage="50" showstepbar=""></kv-wizard-footer>
      </div>
    </div>
  </mock:shadow-root>
</kv-wizard>
`;

exports[`Wizard (unit tests) when current step have errors should match the snapshot 1`] = `
<kv-wizard complete-btn-label="Submit" current-step="1" current-step-state="error" show-header="" show-step-bar="">
  <mock:shadow-root>
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Configuration" label="Step 2"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer currentstep="1" haserror="" nextbtnlabel="Next" prevbtnlabel="Back" prevenabled="" progresspercentage="50" showstepbar=""></kv-wizard-footer>
      </div>
    </div>
  </mock:shadow-root>
</kv-wizard>
`;

exports[`Wizard (unit tests) when current step have success state should match the snapshot 1`] = `
<kv-wizard complete-btn-label="Submit" current-step="1" current-step-state="success" show-header="" show-step-bar="">
  <mock:shadow-root>
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Configuration" label="Step 2"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer currentstep="1" nextbtnlabel="Next" nextenabled="" prevbtnlabel="Back" prevenabled="" progresspercentage="50" showstepbar=""></kv-wizard-footer>
      </div>
    </div>
  </mock:shadow-root>
</kv-wizard>
`;

exports[`Wizard (unit tests) when current step is the first one should match the snapshot 1`] = `
<kv-wizard complete-btn-label="Submit" current-step="0" current-step-state="success" show-header="" show-step-bar="">
  <mock:shadow-root>
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Info" label="Step 1"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer currentstep="0" nextbtnlabel="Next" nextenabled="" prevbtnlabel="Cancel" prevenabled="" progresspercentage="0" showstepbar=""></kv-wizard-footer>
      </div>
    </div>
  </mock:shadow-root>
</kv-wizard>
`;

exports[`Wizard (unit tests) when current step is the last one should match the snapshot 1`] = `
<kv-wizard complete-btn-label="Deploy" current-step="2" current-step-state="success" show-header="" show-step-bar="">
  <mock:shadow-root>
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Confirmation" label="Step 3"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer currentstep="2" nextbtnlabel="Deploy" nextenabled="" prevbtnlabel="Back" prevenabled="" progresspercentage="100" showstepbar=""></kv-wizard-footer>
      </div>
    </div>
  </mock:shadow-root>
</kv-wizard>
`;

exports[`Wizard (unit tests) when showHeader is false should match the snapshot 1`] = `
<kv-wizard complete-btn-label="Submit" current-step="1" show-step-bar="">
  <mock:shadow-root>
    <div class="wizard">
      <div class="wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer currentstep="1" nextbtnlabel="Next" prevbtnlabel="Back" prevenabled="" progresspercentage="50" showstepbar=""></kv-wizard-footer>
      </div>
    </div>
  </mock:shadow-root>
</kv-wizard>
`;

exports[`Wizard (unit tests) when showStepBar is false should match the snapshot 1`] = `
<kv-wizard complete-btn-label="Submit" current-step="1" show-header="">
  <mock:shadow-root>
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Configuration" label="Step 2"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer currentstep="1" nextbtnlabel="Next" prevbtnlabel="Back" prevenabled="" progresspercentage="50"></kv-wizard-footer>
      </div>
    </div>
  </mock:shadow-root>
</kv-wizard>
`;
